# mc_afterglow

./: .gitignore  README.md  pyproject.toml
mc_afterglow/: __init__.py  __main__.py  helpers.py  reader.py  run.py
scripts/: read_grb990510.py
